@@ -1,3 +1,15 @@
 TODO file for Business-OnlinePayment-CashCow
 
-$Id: TODO,v 1.1 2005-08-02 22:03:21 jonasbn Exp $
+$Id: TODO,v 1.2 2005-08-03 20:38:31 jonasbn Exp $
+
+* Implement handling of e-dankort card type
+
+* Implement handling of ecredit transactions (default is PBS)
+
+* Implement handling of subscribtions
+
+* Investigate return values
+
+* Make it possible to control what fields are mandatory and optional.
+  This could be done via the optional processor info parameter to the
+  constructor (SEE: new).
