@@ -1,3 +1,7 @@
 Changes file for Business-OnlinePayment-CashCow
 
-$Id: Changes,v 1.1 2005-08-02 22:03:21 jonasbn Exp $
+$Id: Changes,v 1.2 2005-08-03 20:38:31 jonasbn Exp $
+
+Wed Aug  3 2005 (jonasbn)
+
+- We have a release candidate
